@@ -3,7 +3,8 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.2.1 (pending)
 ==========================
 
-- Restore the last displayed graph page when reset/undoing.
+- Topology stats use tree view to collapse/hide stat data
+- Restore the last displayed graph page when reset/undoing
 - Splash screen prints the current saved graph loading
 - Fix graph editor handle cut to check for active graph
 - Topology evaluator connections check for port existence
